--- a/app/src/main/res/layout/activity_manifest.xml
+++ b/app/src/main/res/layout/activity_manifest.xml
@@ -9,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="250dp"
         android:text="New Text"
-        android:id="@+id/textView"
+        android:id="@+id/pledgeView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
