--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,7 +8,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Start"
+        android:text="@string/start"
         android:id="@+id/startButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -18,17 +18,20 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:id="@+id/imageView2"
-        android:background="@color/orange"
-        android:foreground="@color/orange"
+        android:background="@color/blue"
         android:layout_alignBottom="@+id/startButton"
         android:layout_alignLeft="@+id/startButton"
-        android:layout_alignStart="@+id/startButton" />
+        android:layout_alignStart="@+id/startButton"
+        android:focusableInTouchMode="false"
+        android:focusable="false"
+        android:foreground="@color/orange"
+        android:cropToPadding="false" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:text="@string/achievements"
+        android:id="@+id/achieveButton"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/imageView2"
         android:layout_alignStart="@+id/imageView2"
@@ -39,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="The most important promises are the ones we make to ourselves."
+        android:text="@string/important_promises"
         android:id="@+id/textView"
         android:layout_above="@+id/startButton"
         android:layout_alignLeft="@+id/imageView2"
@@ -49,20 +52,20 @@
         android:layout_width="match_parent"
         android:layout_height="85dp"
         android:id="@+id/imageView"
-        android:layout_alignTop="@+id/button"
-        android:layout_alignLeft="@+id/button"
-        android:layout_alignStart="@+id/button"
+        android:layout_alignTop="@+id/achieveButton"
+        android:layout_alignLeft="@+id/achieveButton"
+        android:layout_alignStart="@+id/achieveButton"
         android:background="@color/blue" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Gentle Resolve"
+        android:text="@string/gentle_resolve"
         android:id="@+id/textView2"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/achieveButton"
         android:layout_alignLeft="@+id/imageView"
         android:layout_alignStart="@+id/imageView"
         android:textSize="30sp" />
