add slight purple shadow to activity_manifest.xml TextView output

--- a/app/src/main/res/layout/activity_manifest.xml
+++ b/app/src/main/res/layout/activity_manifest.xml
@@ -12,5 +12,12 @@
         android:id="@+id/pledgeView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="40sp"
+        android:textColor="@android:color/black"
+        android:shadowColor="@color/purple"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"
+        android:textStyle="bold" />
 </RelativeLayout>
