refactor rename vision to diamond, before implementing diamonds arraylist

--- a/app/src/main/res/layout/activity_manifest.xml
+++ b/app/src/main/res/layout/activity_manifest.xml
@@ -20,4 +20,12 @@
         android:shadowDy="2"
         android:shadowRadius="3"
         android:textStyle="bold" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
