--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -41,6 +41,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="63dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:singleLine="true"
+        android:imeOptions="actionDone" />
 
 </RelativeLayout>
