--- a/app/src/main/res/layout/activity_manifest.xml
+++ b/app/src/main/res/layout/activity_manifest.xml
@@ -5,19 +5,11 @@
     android:layout_height="250dp"
     tools:context=".CreateActivity">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        android:text="New Text"
-        android:id="@+id/pledgeView"
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/visionListView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="40sp"
-        android:textColor="@android:color/black"
-        android:shadowColor="@color/purple"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="3"
-        android:textStyle="bold" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
