mess around with listView Height

--- a/app/src/main/res/layout/activity_manifest.xml
+++ b/app/src/main/res/layout/activity_manifest.xml
@@ -7,9 +7,10 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="1000dp"
         android:id="@+id/visionListView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="false" />
+
 </RelativeLayout>
