--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,26 +4,26 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/itemTextView"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:text="TextView" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/doneButton"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:text="Button"
-        android:layout_below="@+id/textView1"
+        android:text="Done"
+        android:layout_below="@+id/itemTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/shareButton"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:text="Button"
-        android:layout_alignTop="@+id/button1"
+        android:text="Share"
+        android:layout_alignTop="@+id/doneButton"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
