--- a/app/src/main/res/layout/activity_results_list.xml
+++ b/app/src/main/res/layout/activity_results_list.xml
@@ -13,4 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerView"/>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="194dp" />
 </RelativeLayout>
