--- a/app/src/main/res/layout/activity_find_support.xml
+++ b/app/src/main/res/layout/activity_find_support.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.tim.gentleresolve.FindSupportActivity">
+    tools:context=".api_ui.FindSupportActivity">
 
     <EditText
         android:layout_width="match_parent"
