--- a/app/src/main/res/layout/activity_results_list.xml
+++ b/app/src/main/res/layout/activity_results_list.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.tim.gentleresolve.ResultsListActivity">
+    tools:context=".api_ui.ResultsListActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
