--- a/app/src/main/res/layout/activity_find_support.xml
+++ b/app/src/main/res/layout/activity_find_support.xml
@@ -17,7 +17,9 @@
         android:layout_marginTop="50dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:singleLine="true"
+        android:imeOptions="actionDone"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -25,7 +27,9 @@
         android:id="@+id/zipInput"
         android:hint="zip"
         android:layout_below="@+id/passionInput"
-        android:layout_marginTop="81dp" />
+        android:layout_marginTop="81dp"
+        android:singleLine="true"
+        android:imeOptions="actionDone"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -34,7 +38,9 @@
         android:hint="distance willing to travel"
         android:layout_below="@+id/zipInput"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="79dp" />
+        android:layout_marginTop="79dp"
+        android:singleLine="true"
+        android:imeOptions="actionDone"/>
 
     <Button
         android:layout_width="wrap_content"
