--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -24,13 +24,13 @@
         android:paddingBottom="10dp"
         android:id="@+id/manifestButton"
         android:background="@drawable/blue_button"
-        android:layout_alignBottom="@+id/imageView4"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_height="125dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
