adjust imagesize in fragment_meetup_detail.xml

--- a/app/src/main/res/layout/activity_find_support.xml
+++ b/app/src/main/res/layout/activity_find_support.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/passionInput"
-        android:hint="passion"
+        android:hint="interest/passion/goal"
         android:layout_marginTop="50dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/radiusInput"
-        android:hint="distance willing to travel"
+        android:hint="distance willing to travel (in miles)"
         android:layout_below="@+id/zipInput"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="79dp"
