--- a/app/src/main/res/layout/fragment_meetup_detail.xml
+++ b/app/src/main/res/layout/fragment_meetup_detail.xml
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Brunch, American"
-                android:id="@+id/interestTextView"
+                android:id="@+id/cityTextView"
                 android:layout_below="@+id/meetupNameTextView"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
