--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.tim.gentleresolve.main_ui.LoginActivity"
-    android:background="@color/colorPrimary">
+    android:background="@color/orange">
 
     <LinearLayout
         android:orientation="vertical"
@@ -50,15 +50,15 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="Log in"
-            android:background="@color/colorAccent"
+            android:background="@color/blue"
             android:layout_marginTop="15dp"
-            android:textColor="@android:color/holo_blue_dark" />
+            android:textColor="@color/purple" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textColor="@android:color/holo_blue_dark"
+            android:textColor="@color/purple"
             android:textStyle="bold"
             android:textSize="15sp"
             android:text="Don't have an account? Sign up here!"
