--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -5,27 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".main_ui.StartActivity">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/start"
-        android:id="@+id/startButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:id="@+id/imageView2"
         android:background="@color/blue"
-        android:layout_alignBottom="@+id/startButton"
-        android:layout_alignLeft="@+id/startButton"
-        android:layout_alignStart="@+id/startButton"
+
         android:focusableInTouchMode="false"
         android:focusable="false"
         android:foreground="@color/orange"
-        android:cropToPadding="false" />
+        android:cropToPadding="false"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -52,10 +45,10 @@
         android:layout_width="match_parent"
         android:layout_height="85dp"
         android:id="@+id/imageView"
-        android:layout_alignTop="@+id/achieveButton"
-        android:layout_alignLeft="@+id/achieveButton"
-        android:layout_alignStart="@+id/achieveButton"
-        android:background="@color/blue" />
+        android:background="@color/blue"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="match_parent"
@@ -65,10 +58,10 @@
         android:id="@+id/textView2"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:textSize="30sp"
         android:layout_below="@+id/achieveButton"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView"
-        android:textSize="30sp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -82,5 +75,44 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:scaleType="centerCrop" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight=".30"
+            android:text="@string/start"
+            android:id="@+id/savedSuppportButton"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@color/yellow" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight=".28"
+            android:text="find"
+            android:id="@+id/findSupportButton"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@color/yellow" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight=".28"
+            android:text="create vision"
+            android:id="@+id/startButton"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/aqua-button" />
+    </LinearLayout>
 
 </RelativeLayout>
