--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="orange">#ffa035</color>
     <color name="yellow">#FFEB3F</color>
     <color name="purple">#2134A0</color>
+    <color name="black">#000000</color>
 </resources>
