--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -85,7 +85,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="@drawable/aqua_button" />
+            android:background="@drawable/oval" />
         <Button
             android:layout_width="200dp"
             android:layout_height="70dp"
@@ -95,7 +95,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="@drawable/aqua_button"
+            android:background="@drawable/oval"
             android:allowUndo="false" />
         <Button
             android:layout_width="200dp"
@@ -106,7 +106,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="@drawable/aqua_button" />
+            android:background="@drawable/oval" />
     </LinearLayout>
 
 </RelativeLayout>
