--- a/app/src/main/res/layout/fragment_meetup_detail.xml
+++ b/app/src/main/res/layout/fragment_meetup_detail.xml
@@ -32,17 +32,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Organizer:   Beth Stevens"
-                android:id="@+id/organizerTextView"
-                android:textColor="@color/blue"
-                android:textStyle="bold"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Brunch, American"
@@ -72,14 +61,23 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_above="@+id/saveMeetupButton"
-                android:paddingLeft="30dp"
-                android:paddingTop="20dp"
-                android:paddingRight="30dp">
+                android:layout_above="@+id/saveMeetupButton">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Organizer:   Beth Stevens"
+                    android:id="@+id/organizerTextView"
+                    android:textColor="@color/blue"
+                    android:textStyle="bold"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
                     android:text="We are a group of professional developers in the tech world..."
                     android:drawablePadding="4dp"
                     android:id="@+id/descriptionTextView"
@@ -88,20 +86,6 @@
                     android:textStyle="bold"
                     android:layout_marginBottom="10dp"
                     android:gravity="center_vertical"/>
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="View on Meeetup"
-                    android:id="@+id/websiteTextView"
-                    android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
-                    android:drawablePadding="4dp"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center" />
 
 
             </LinearLayout>
@@ -115,6 +99,21 @@
                 android:background="@color/yellow"
                 android:textColor="@color/purple"
                 android:textSize="15sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="View on Meeetup"
+                android:id="@+id/websiteTextView"
+                android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
+                android:drawablePadding="4dp"
+                android:textColor="@android:color/white"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_above="@+id/saveMeetupButton"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
         </RelativeLayout>
     </LinearLayout>
 </FrameLayout>
