--- a/app/src/main/res/layout/fragment_meetup_detail.xml
+++ b/app/src/main/res/layout/fragment_meetup_detail.xml
@@ -13,7 +13,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="88dp"
-            android:background="@android:color/white"
+            android:background="@color/blue"
             android:paddingTop="20dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -77,7 +77,7 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="60dp"
                     android:text="We are a group of professional developers in the tech world..."
                     android:drawablePadding="4dp"
                     android:id="@+id/descriptionTextView"
