--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryDark">@color/blue</item>
         <item name="colorAccent">@color/yellow</item>
+        <item name="android:actionMenuTextColor">@color/yellow</item>
     </style>
 
     <style name="StartTheme" parent="Theme.AppCompat.Light.NoActionBar"></style>
