--- a/app/src/main/res/drawable/oval.xml
+++ b/app/src/main/res/drawable/oval.xml
@@ -16,7 +16,7 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="oval">
             <solid
-                android:color="@color/blue"/>
+                android:color="@color/yellow"/>
             <stroke android:width="4px" android:color="@color/black"/>
             <size
                 android:width="120dp"
