--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -78,34 +78,40 @@
         android:layout_marginBottom="5dp">
         <Button
             android:layout_width="200dp"
-            android:layout_height="70dp"
+            android:layout_height="85dp"
             android:layout_weight=".30"
             android:text="Find Support"
             android:id="@+id/findSupportButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/oval" />
         <Button
             android:layout_width="200dp"
-            android:layout_height="70dp"
+            android:layout_height="85dp"
             android:layout_weight=".28"
             android:text="Saved Support"
             android:id="@+id/savedSuppportButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/oval"
             android:allowUndo="false" />
         <Button
             android:layout_width="200dp"
-            android:layout_height="70dp"
+            android:layout_height="85dp"
             android:layout_weight=".28"
             android:text="create vision"
             android:id="@+id/startButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/oval" />
     </LinearLayout>
 
