--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="yellow">#FFEB3F</color>
     <color name="purple">#2134A0</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
