--- a/app/src/main/res/layout/meetup_list_item.xml
+++ b/app/src/main/res/layout/meetup_list_item.xml
@@ -21,7 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@drawable/black_border"
+            android:background="@drawable/white_border"
+            android:layout_margin="2dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="2dp"
             android:baselineAligned="true">
 
             <TextView
@@ -29,9 +32,10 @@
                 android:text="left"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:textColor="@color/orange"
                 android:layout_weight=".4"
-                android:background="@drawable/blue_border" />
+                android:background="@color/black"
+                android:allowUndo="false" />
 
             <TextView
                 android:id="@+id/organizerTextView"
@@ -39,7 +43,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight=".3"
-                android:background="@drawable/blue_border" />
+                android:background="@color/black"
+                android:allowUndo="false"
+                android:textColor="@color/orange" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -50,10 +56,18 @@
                 android:layout_alignParentRight="true"
 
                 android:layout_weight=".30"
-                android:background="@drawable/blue_border" />
+                android:background="@color/black"
+                android:allowUndo="false"
+                android:textColor="@color/orange" />
 
         </LinearLayout>
     </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/white" />
 </LinearLayout>
 
 
