change colors on find support button

--- a/app/src/main/res/layout/activity_manifest.xml
+++ b/app/src/main/res/layout/activity_manifest.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@color/black" >
 
     <ListView
         android:layout_height="465dp"
         android:id="@+id/visionListView"
         android:layout_width="fill_parent"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Find Support (via Meetup)"
-        android:id="@+id/supportButton" />
+        android:id="@+id/supportButton"
+        android:layout_alignParentBottom="true"
+        android:background="@color/orange" />
 
-</LinearLayout>
+</RelativeLayout>
