--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/itemTextView"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="TextView" />
+        android:layout_height="40dp"
+        android:text="TextView"
+        android:background="@color/yellow"
+        android:textSize="30sp"
+        android:textColor="@color/black" />
 
 
 </RelativeLayout>
