new text colors for buttons in activity_start.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="purple">#2134A0</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="darkBlue">#1c73ff</color>
 </resources>
