--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -62,7 +62,7 @@
             android:layout_weight="0.65">
 
             <Button
-                android:layout_marginLeft="50dp"
+                android:layout_marginLeft="45dp"
                 android:layout_marginTop="20dp"
                 android:layout_width="120dp"
                 android:layout_height="75dp"
@@ -92,8 +92,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginRight="58dp"
-                android:layout_marginEnd="58dp" />
+                android:layout_marginRight="45dp"/>
 
             <Button
                 android:text="Create Vision"
@@ -101,7 +100,7 @@
                 android:background="@color/blue"
                 android:layout_width="120dp"
                 android:layout_height="75dp"
-                android:layout_marginRight="58dp"
+                android:layout_marginRight="45dp"
                 android:layout_below="@+id/inMotionButton"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
