--- a/app/src/main/res/layout/meetup_list_item.xml
+++ b/app/src/main/res/layout/meetup_list_item.xml
@@ -39,7 +39,7 @@
 
             <TextView
                 android:id="@+id/organizerTextView"
-                android:text="right"
+                android:text="Organizer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight=".3"
